--- a/src/main/resources/templates/account/modifyprofile.html
+++ b/src/main/resources/templates/account/modifyprofile.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>정보 수정</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<div layout:fragment="content">
     <div class="container">
         <div class="row mt-5">
             <div class="col-6 offset-3">
-                <h2 class="text-center"> 정보 수정 </h2> </br>
+                <h5 class="text-center"> 정보 수정 </h5> </br>
                     <form th:object="${accountDTO}" action="/account/update" method="post">
                         <div class="mb-3">
                             <label for="name" class="form-label">이름</label>
@@ -30,5 +33,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
