--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -24,11 +24,13 @@
                 <div class="flex-grow-1 d-flex align-items-center col-8 offset-3 navoff">
                     <ul class="navbar-nav flex-row mb-2 mb-md-0">
                         <li class="nav-item dropdown col-5 h3">
-                            <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="#">
+                            <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="/blog/list">
                                 조잘조잘
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
-                                <li><button onclick="location.href='/blog/register'" class="dropdown-item poor-story-regular" id="blogVoteToggle">조잘조잘 작성</button></li>
+                                <th:block sec:authorize="isAuthenticated()">
+                                    <li><button onclick="location.href='/blog/register'" class="dropdown-item poor-story-regular" id="blogVoteToggle">조잘조잘 작성</button></li>
+                                </th:block>
                                 <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">조잘조잘 리스트</button></li>
                             </ul>
                         </li>
