--- a/src/main/resources/templates/blog/register.html
+++ b/src/main/resources/templates/blog/register.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/layout.html}">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
     <meta charset="UTF-8">
@@ -17,64 +16,65 @@
 </head>
 <body>
 
-<!-- 기본 네비게이션 메뉴 -->
-<!--<nav class="navbar navbar-expand-md navbar-light bg-body-tertiary p-0 m-0" style="background-image: url('/navback.webp'); background-size: cover; background-position: center;">-->
-<!--    <a href="/main/home">-->
-<!--        <img src="/logo.webp" class="navbar-brand btn p-0 m-0" id="home" style="width: 100px; height: 100px; object-fit: scale-down;">-->
-<!--    </a>-->
-<!--    <div class="container-fluid d-flex align-items-center">-->
+<nav class="navbar navbar-expand-md navbar-light bg-body-tertiary p-0 m-0" style="background-image: url('/navback.webp'); background-size: cover; background-position: center;">
+    <a href="/main/home">
+        <img src="/logo.webp" class="navbar-brand btn p-0 m-0" id="home" style="width: 100px; height: 100px; object-fit: scale-down;">
+    </a>
+    <div class="container-fluid d-flex align-items-center">
 
-<!--        &lt;!&ndash; 네비게이션 메뉴 가운데 정렬 및 간격 넓힘 &ndash;&gt;-->
-<!--        <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">-->
-<!--            <div class="flex-grow-1 d-flex align-items-center col-8 offset-3 navoff">-->
-<!--                <ul class="navbar-nav flex-row mb-2 mb-md-0">-->
-<!--                    <li class="nav-item dropdown col-5 h3">-->
-<!--                        <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="#">-->
-<!--                            조잘조잘-->
-<!--                        </a>-->
-<!--                        <ul class="dropdown-menu" aria-labelledby="blogTapToggle">-->
-<!--                            <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">블로그</button></li>-->
-<!--                            <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogVoteToggle">추천 블로그</button></li>-->
-<!--                        </ul>-->
-<!--                    </li>-->
+        <!-- 네비게이션 메뉴 가운데 정렬 및 간격 넓힘 -->
+        <div class="collapse navbar-collapse me-5" id="navbarSupportedContent">
+            <div class="flex-grow-1 d-flex align-items-center col-8 offset-3 navoff">
+                <ul class="navbar-nav flex-row mb-2 mb-md-0">
+                    <li class="nav-item dropdown col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="blogTapToggle" href="#">
+                            조잘조잘
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="blogTapToggle">
+                            <li><button onclick="location.href='/blog/register'" class="dropdown-item poor-story-regular" id="blogVoteToggle">조잘조잘 작성</button></li>
+                            <li><button onclick="location.href='/blog/list'" class="dropdown-item poor-story-regular" id="blogDetailToggle">조잘조잘 리스트</button></li>
+                        </ul>
+                    </li>
 
-<!--                    <li class="nav-item dropdown col-5 offset-4 col-5 h3">-->
-<!--                        <a class="nav-link btn poor-story-regular" id="placeTapToggle" href="#">-->
-<!--                            플레이스-->
-<!--                        </a>-->
-<!--                        <ul class="dropdown-menu" aria-labelledby="placeTapToggle">-->
-<!--                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스 블로그</button></li>-->
-<!--                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">추천 플레이스</button></li>-->
-<!--                        </ul>-->
-<!--                    </li>-->
+                    <li class="nav-item dropdown col-5 offset-4 col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="placeTapToggle" onclick="location.href='/place/list'">
+                            플레이스
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="placeTapToggle">
+                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeDetailToggle">플레이스</button></li>
+                            <li><button onclick="location.href='/place/list'" class="dropdown-item" id="placeVoteToggle">식당</button></li>
+                        </ul>
+                    </li>
 
-<!--                    <li class="nav-item dropdown col-6 offset-4 col-5 h3">-->
-<!--                        <a class="nav-link btn poor-story-regular" id="eventTapToggle" href="#">-->
-<!--                            공지 및 이벤트-->
-<!--                        </a>-->
-<!--                        <ul class="dropdown-menu" aria-labelledby="eventTapToggle">-->
-<!--                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventDetailToggle">공지사항</button></li>-->
-<!--                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventVoteToggle">이벤트</button></li>-->
-<!--                        </ul>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
+                    <li class="nav-item dropdown col-6 offset-4 col-5 h3">
+                        <a class="nav-link btn poor-story-regular" id="eventTapToggle" href="#">
+                            공지 및 이벤트
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="eventTapToggle">
+                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventDetailToggle">공지사항</button></li>
+                            <li><button onclick="location.href='/notice/list'" class="dropdown-item" id="eventVoteToggle">이벤트</button></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-<!--        &lt;!&ndash; 회원가입 및 로그인 버튼을 토글 버튼 왼쪽에 배치 &ndash;&gt;-->
-<!--        <div class="d-flex ms-auto align-items-center justify-content-end flex-nowrap">-->
-<!--            <button class="btn nav nav-link order-2">회원가입</button>-->
-<!--            <button class="btn nav nav-link order-3">로그인</button>-->
+        <!-- 회원가입 및 로그인 버튼을 토글 버튼 왼쪽에 배치 -->
+        <div class="d-flex ms-auto align-items-center justify-content-end flex-nowrap">
+            <button class="btn nav nav-link order-2">회원가입</button>
+            <button class="btn nav nav-link order-3">로그인</button>
 
-<!--            &lt;!&ndash; 토글 버튼은 우측 끝에 고정 &ndash;&gt;-->
-<!--            <button class="navbar-toggler order-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--                <span class="navbar-toggler-icon"></span>-->
-<!--            </button>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</nav>-->
+            <!-- 토글 버튼은 우측 끝에 고정 -->
+            <button class="navbar-toggler order-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+</nav>
 
-<div layout:fragment="content" class="container mt-4">
+<div layout:fragment="content" class="container mt-2">
+
+
 
     <form class="regi" action="/blog/register" method="post" th:object="${blogDTO}" >
         <input type="hidden" name="readCount" value=0>
